cabal-version:      3.0
name:               vty-unix
version:            0.1.0.0
synopsis:           Unix backend for Vty
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jonathan Daugherty
maintainer:         cygnus@foobox.com
copyright:          (c) 2023 Jonathan Daugherty
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   src
    default-language: Haskell2010
    c-sources:        cbits/set_term_timing.c
                      cbits/gwinsz.h
                      cbits/gwinsz.c
    exposed-modules:  Data.Terminfo.Eval
                      Data.Terminfo.Parse
                      Graphics.Vty.Platform.Unix
                      Graphics.Vty.Platform.Unix.Config
                      Graphics.Vty.Platform.Unix.Output
                      Graphics.Vty.Platform.Unix.Output.TerminfoBased
                      Graphics.Vty.Platform.Unix.Output.XTermColor
                      Graphics.Vty.Platform.Unix.Output.Color
                      Graphics.Vty.Platform.Unix.Input
                      Graphics.Vty.Platform.Unix.Input.Loop
                      Graphics.Vty.Platform.Unix.Input.Terminfo
                      Graphics.Vty.Platform.Unix.Input.Terminfo.ANSIVT
                      Graphics.Vty.Platform.Unix.Input.Focus
                      Graphics.Vty.Platform.Unix.Input.Paste
                      Graphics.Vty.Platform.Unix.Input.Mouse
                      Graphics.Vty.Platform.Unix.Input.Classify
                      Graphics.Vty.Platform.Unix.Input.Classify.Parse
                      Graphics.Vty.Platform.Unix.Input.Classify.Types
    build-depends:    base ^>=4.16.4.0,
                      blaze-builder,
                      bytestring,
                      mtl,
                      unix,
                      terminfo,
                      vty,
                      deepseq,
                      vector,
                      parsec,
                      containers,
                      utf8-string,
                      transformers,
                      stm,
                      microlens,
                      microlens-mtl,
                      microlens-th
